# aws-ai-hackathon-autoops

./: .env.example  .gitignore  DEPENDENCIES.md  LICENSE  Makefile  PRD.md  README.md  SECURITY.md  __init__.py  demo_monitoring_system.py  demo_scenarios_standalone.py  final_integration_test.py  main.py  pyproject.toml  run_agent_demo.py  test_bedrock_connection.py  test_monitoring_system.py
.kiro/specs/autoops-retail-optimization/: design.md  requirements.md  tasks.md
.kiro/specs/langfuse-workflow-visualization/: design.md  requirements.md  tasks.md
agents/: __init__.py  collaboration.py  error_handling.py  function_tracker.py  inventory_agent.py  memory.py  orchestrator.py  pricing_agent.py  promotion_agent.py  result_formatters.py
api/: __init__.py  main.py
api/routers/: __init__.py  dashboard.py  decisions.py  inventory.py  pricing.py  promotions.py  shared.py
config/: langfuse_agent_performance_views.py  langfuse_alerting.py  langfuse_async_processor.py  langfuse_buffer.py  langfuse_compression.py  langfuse_config.py  langfuse_dashboard_api.py  langfuse_dashboard_config.py  langfuse_dashboard_configuration_manager.py  langfuse_dashboard_data_aggregator.py  langfuse_dashboard_integration.py  langfuse_dashboard_realtime.py  langfuse_data_masking.py  langfuse_error_handler.py  langfuse_health_checker.py  langfuse_integration.py  langfuse_monitoring_alerting.py  langfuse_monitoring_dashboard.py  langfuse_performance_guide.py  langfuse_performance_monitor.py  langfuse_resilience_integration.py  langfuse_sampling.py  langfuse_workflow_views.py  langfuse_workflow_visualization_views.py  logging_config.py  metrics_collector.py  orchestrator_tracing.py  settings.py  simulation_event_capture.py
dashboard/: README.md  app.py  requirements.txt  test_dashboard.py
docs/: README.md  developer-guide.md  integration-guide.md  langfuse_configuration.md  langfuse_integration_foundation.md  langfuse_integration_guide.md  langfuse_troubleshooting_guide.md  langfuse_workflow_examples.md  troubleshooting.md  websocket_api.md  workflow-visualization.md
docs/examples/: README.md  basic-usage.md  workflow-tracing.md
examples/: error_handling_integration.py  langfuse_error_handling_demo.py  langfuse_foundation_demo.py  langfuse_integration_demo.py  metrics_collection_demo.py  websocket_client_example.py
scripts/: demo_api.py  demo_memory.py  deploy_langfuse.py  performance_test.py  setup_memory.py  start_api.py  system_validation.py  validate_dependencies.py  validate_langfuse_config.py  validate_setup.py
simulation/: __init__.py  competitors.py  demand.py  engine.py  iot.py  products.py  social.py  triggers.py
tests/: __init__.py  test_agent_collaboration.py  test_api_endpoints.py  test_collaboration.py  test_dashboard_websockets.py  test_data_generators.py  test_error_handling.py  test_integration_e2e.py  test_inventory_agent.py  test_langfuse_integration.py  test_langfuse_integration_e2e.py  test_langfuse_load_testing.py  test_langfuse_performance.py  test_langfuse_performance_benchmarks.py  test_langfuse_security.py  test_memory.py  test_metrics_collector.py  test_models.py  test_orchestrator_integration.py  test_orchestrator_structure.py  test_orchestrator_tracing.py  test_pricing_agent.py  test_promotion_agent.py  test_scenarios.py  test_simulation.py  test_simulation_event_capture.py  test_simulation_integration.py
tools/: __init__.py
